test/bad/int_bool_assignment.lat
int main() {
	int n = 1;
	boolean b = false;
	n = b;
}
